Created Admin area: Products controller, create and all views Product service CreateDbContext

--- a/SvetulkaApp/Services/SvetulkaApp.Services/SvetulkaApp.Services.csproj
+++ b/SvetulkaApp/Services/SvetulkaApp.Services/SvetulkaApp.Services.csproj
@@ -18,4 +18,12 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Data\SvetulkaApp.Data.Models\SvetulkaApp.Data.Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
+
 </Project>
