--- a/SvetulkaApp/Web/SvetulkaApp.Web/SvetulkaApp.Web.csproj
+++ b/SvetulkaApp/Web/SvetulkaApp.Web/SvetulkaApp.Web.csproj
@@ -26,6 +26,9 @@
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="X.PagedList" Version="7.9.0" />
+    <PackageReference Include="X.PagedList.Mvc" Version="7.9.1" />
+    <PackageReference Include="X.PagedList.Mvc.Core" Version="7.9.1" />
   </ItemGroup>
 
   <ItemGroup>
