Shopping cart added

--- a/SvetulkaApp/Data/SvetulkaApp.Data/SvetulkaApp.Data.csproj
+++ b/SvetulkaApp/Data/SvetulkaApp.Data/SvetulkaApp.Data.csproj
@@ -11,6 +11,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190930134107_addedshoppingCartId.cs" />
+    <Compile Remove="Migrations\20190930155240_addedshoppingCartId.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <AdditionalFiles Include="..\..\stylecop.json" />
   </ItemGroup>
 
